# work_with_database

./: .gitignore  README.md  pyproject.toml
dosc_eng/: README.md
src/: config.py  main.py  sql queries.sql
src/classes/: db_manager.py
src/utils/: hh_api.py  user_interaction_en.py  user_interaction_ru.py
utils/: user_interaction_en.py  user_interaction_ru.py  utils.py
